--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroui/react": "^2.7.8",
     "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
     "framer-motion": "^12.9.2",
     "lucide-react": "^0.503.0",
     "react": "^18.2.0",
